k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navalrivals-api-service
  namespace: navalrivals
spec:
  selector:
    app: navalrivals-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
