k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navalrivals-ingress
  namespace: navalrivals
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "navalrivals-api-service"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: navalrivals-api-service
                port:
                  number: 80
